build: replace npm with yarn (#14036)
* docs: add yarn examples

* build: replace npm with yarn

* docs: remove npm examples for contributors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -280,7 +280,7 @@ jobs:
         with:
           node-version: 16.x
       - run: yarn install --frozen-lockfile
-      - run: npx semantic-release
+      - run: yarn semantic-release
       - id: sequelize
         uses: sdepold/github-action-get-latest-release@master
         with:
