feat(dialects): add support for DB2 for IBM i (#14009)
* feat(ibmi): add new ibmi dialect

Signed-off-by: Mark Irish <mirish@ibm.com>

* feat(ibmi): final changes to IBM i dialect

Signed-off-by: Mark Irish <mirish@ibm.com>

* feat(ibmi): fix package.json

Signed-off-by: Mark Irish <mirish@ibm.com>

* feat(ibmi): review chanes

Signed-off-by: Mark Irish <mirish@ibm.com>

* feat(ibmi): fix inefficient unique-primary field comparison

Signed-off-by: Mark Irish <mirish@ibm.com>

* feat(ibmi): fix test-unit-all invocation

Signed-off-by: Mark Irish <mirish@ibm.com>

Co-authored-by: Sascha Depold <sdepold@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,24 @@ jobs:
         run: yarn test-unit
       - name: Integration Tests
         run: yarn test-integration
+  test-ibmi:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [12, 16]
+    name: IBM i (Node ${{ matrix.node-version }})
+    runs-on: ubuntu-latest
+    needs: test-typings
+    env:
+      DIALECT: ibmi
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install --frozen-lockfile --ignore-engines
+      - name: Unit Tests
+        run: yarn test-unit
   test-sqlite:
     strategy:
       fail-fast: false
