--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sequelize/core",
-  "description": "Sequelize is a promise-based Node.js ORM tool for Postgres, MySQL, MariaDB, SQLite, Microsoft SQL Server, Amazon Redshift and Snowflake’s Data Cloud. It features solid transaction support, relations, eager and lazy loading, read replication and more.",
+  "description": "Sequelize is a promise-based Node.js ORM tool for Postgres, MySQL, MariaDB, SQLite, Microsoft SQL Server, Amazon Redshift, Snowflake’s Data Cloud, Db2, and IBM i. It features solid transaction support, relations, eager and lazy loading, read replication and more.",
   "version": "0.0.0-development",
   "funding": [
     {
@@ -85,16 +85,17 @@
     "fast-glob": "3.2.11",
     "fs-jetpack": "4.3.1",
     "husky": "7.0.4",
+    "ibm_db": "2.8.1",
     "lcov-result-merger": "3.1.0",
     "lint-staged": "12.3.4",
     "mariadb": "2.5.6",
     "markdownlint-cli": "0.31.1",
     "mocha": "9.2.1",
     "module-alias": "2.2.2",
-    "ibm_db": "2.8.1",
     "mysql2": "2.3.3",
     "node-hook": "1.0.0",
     "nyc": "15.1.0",
+    "odbc": "2.4.2",
     "p-map": "4.0.0",
     "p-props": "4.0.0",
     "p-settle": "4.1.1",
@@ -123,6 +124,9 @@
       "optional": true
     },
     "ibm_db": {
+      "optional": true
+    },
+    "odbc": {
       "optional": true
     },
     "snowflake-sdk": {
@@ -214,6 +218,7 @@
     "mocha": "mocha -r ./test/registerEsbuild",
     "test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
     "test-integration": "yarn mocha \"test/integration/**/*.test.[tj]s\"",
+    "test-smoke": "yarn mocha \"test/smoke/**/*.test.[tj]s\" --timeout 600000",
     "teaser": "node test/teaser.js",
     "test": "yarn prepare && yarn test-typings && yarn teaser && yarn test-unit && yarn test-integration",
     "----------------------------------------- coverage ------------------------------------------------": "",
@@ -247,8 +252,9 @@
     "test-unit-sqlite": "cross-env DIALECT=sqlite yarn test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql yarn test-unit",
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
+    "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
-    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2",
+    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && test-unit-ibmi",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres yarn test-integration",
@@ -256,6 +262,7 @@
     "test-integration-sqlite": "cross-env DIALECT=sqlite yarn test-integration",
     "test-integration-mssql": "cross-env DIALECT=mssql yarn test-integration",
     "test-integration-db2": "cross-env DIALECT=db2 yarn test-integration",
+    "test-integration-ibmi": "cross-env DIALECT=ibmi yarn test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake yarn test-integration",
     "test-mariadb": "cross-env DIALECT=mariadb yarn test",
     "test-mysql": "cross-env DIALECT=mysql yarn test",
@@ -264,6 +271,7 @@
     "test-postgres-native": "cross-env DIALECT=postgres-native yarn test",
     "test-mssql": "cross-env DIALECT=mssql yarn test",
     "test-db2": "cross-env DIALECT=db2 yarn test",
+    "test-ibmi": "cross-env DIALECT=ibmi yarn test",
     "----------------------------------------- development ---------------------------------------------": "",
     "fix-commit": "export TMPFILE=$(mktemp) && grep -v '^#' $(git rev-parse --git-dir)/COMMIT_EDITMSG > $TMPFILE && git commit -e -F $TMPFILE",
     "sscce": "node sscce.js",
