build(deps): move @types/validator to prod deps (#14159)

--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/debug": "^4.1.7",
+    "@types/validator": "^13.7.1",
     "debug": "^4.3.3",
     "dottie": "^2.0.2",
-    "inflection": "^1.13.1",
+    "inflection": "^1.13.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
@@ -63,7 +64,6 @@
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.25",
     "@types/sinon": "10.0.11",
-    "@types/validator": "13.7.1",
     "acorn": "8.7.0",
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
