ci: skip 'rm awaiting response' if label is absent (#14163)
Co-authored-by: Rik Smale <13023439+WikiRik@users.noreply.github.com>

--- a/.github/workflows/auto-remove-awaiting-response-label.yml
+++ b/.github/workflows/auto-remove-awaiting-response-label.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   auto-remove-awaiting-response-label:
     name: Run
+    if: "${{ contains(github.event.issue.labels.*.name, 'status: awaiting response') }}"
     runs-on: ubuntu-latest
     env:
       # Case insensitive. Replace spaces with `%20`.
