ci(artifact): add build artifacts (#14171)
* ci(artifact): add build artifacts

* ci(artifact): use tar archiving

* ci(artifact): add Node 12 build

* ci(test): combine unit test

* ci(types): ensure that test-typings pass before release

* build: fix typo in test-unit-all

* ci(test): add Node 12 unit test

* ci(artifact): combine install-and-build steps

* ci: fix typo

* ci(mysql/mariadb): specify patch version for MySQL and MariaDB

* ci(typescript): move to npm i --no-save

* ci(mariadb): fix patch version of MariaDB 10.5

* ci(pg-native): improve speed pg-native install

* ci(pg-native): fix install on Node 12

* ci(artifact): retain artifacts for 1 day

* ci(pg-native): rebuild sequelize after installing pg-native

* ci(setup-node): add caching

* ci: implement requested changes

--- a/package.json
+++ b/package.json
@@ -258,7 +258,7 @@
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
     "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
-    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && test-unit-ibmi",
+    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres yarn test-integration",
