--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,70 @@ env:
   SEQ_PW: sequelize_test
 
 jobs:
-  lint:
-    name: Lint code and docs
+  install-and-build:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [12, 16]
+    name: Upload install and build artifact (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - name: Install dependencies and build sequelize
+        run: yarn install --frozen-lockfile --ignore-engines
+        if: matrix.node-version == 12
+      - name: Install dependencies and build sequelize
+        run: yarn install --frozen-lockfile
+        if: matrix.node-version == 16
+      - name: Compress artifact
+        run: tar -cf install-build-node-${{ matrix.node-version }}.tar ./lib ./node_modules ./types
+      - uses: actions/upload-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+          path: install-build-node-${{ matrix.node-version }}.tar
+          retention-days: 1
+  lint:
+    name: Lint code and docs
+    runs-on: ubuntu-latest
+    needs: install-and-build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
           node-version: 16.x
-      - run: yarn install --frozen-lockfile
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-16
+      - name: Extract artifact
+        run: tar -xf install-build-node-16.tar
       - run: yarn lint-no-fix
       - run: yarn lint-docs
+  unit-test:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [12, 16]
+    name: Unit test all dialects (Node ${{ matrix.node-version }})
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - name: Unit tests
+        run: yarn test-unit-all
   docs:
     name: Generate docs
     runs-on: ubuntu-latest
@@ -32,7 +85,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - run: yarn install --frozen-lockfile
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-16
+      - name: Extract artifact
+        run: tar -xf install-build-node-16.tar
       - run: yarn docs
   test-typings:
     strategy:
@@ -47,9 +105,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - run: yarn install --frozen-lockfile
-      - run: yarn add --dev typescript@~${{ matrix.ts-version }}
-      - run: yarn test-typings
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-16
+      - name: Extract artifact
+        run: tar -xf install-build-node-16.tar
+      # This step uses npm instead of yarn to minimize the time needed. See #14171
+      - name: Install TypeScript
+        run: npm install --no-save --no-audit typescript@~${{ matrix.ts-version }}
+      - name: Typing Tests
+        run: yarn test-typings
   test-db2:
     strategy:
       fail-fast: false
@@ -57,7 +123,7 @@ jobs:
         node-version: [12, 16]
     name: DB2 (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: test-typings
+    needs: [ unit-test, test-typings ]
     env:
       DIALECT: db2
       SEQ_DB: testdb
@@ -70,31 +136,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Install Local DB2 Copy
         run: yarn start-db2
-      - name: Unit Tests
-        run: yarn test-unit
       - name: Integration Tests
         run: yarn test-integration
-  test-ibmi:
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [12, 16]
-    name: IBM i (Node ${{ matrix.node-version }})
-    runs-on: ubuntu-latest
-    needs: test-typings
-    env:
-      DIALECT: ibmi
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
   test-sqlite:
     strategy:
       fail-fast: false
@@ -102,7 +153,7 @@ jobs:
         node-version: [12, 16]
     name: SQLite (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: test-typings
+    needs: [ unit-test, test-typings ]
     env:
       DIALECT: sqlite
     steps:
@@ -110,9 +161,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
   test-postgres:
@@ -125,7 +179,7 @@ jobs:
         native: [true, false]
     name: Postgres ${{ matrix.postgres-version }}${{ matrix.native && ' (native)' || '' }} (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
     runs-on: ubuntu-latest
-    needs: test-typings
+    needs: [ unit-test, test-typings ]
     services:
       postgres:
         image: sushantdhiman/postgres:${{ matrix.postgres-version }}
@@ -146,12 +200,19 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - run: yarn add pg-native --ignore-engines
-        if: matrix.native
-      - name: Unit Tests
-        run: yarn test-unit
-        if: ${{ !matrix.minify-aliases }}
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - name: Install pg-native (Node 12)
+        run: yarn add pg-native --ignore-engines
+        if: matrix.native && matrix.node-version == 12
+      # This step uses npm instead of yarn to minimize the time needed. See #14171
+      - name: Install pg-native (Node 16)
+        run: npm install --no-save --no-audit pg-native
+        if: matrix.native && matrix.node-version == 16
       - name: Integration Tests
         run: yarn test-integration
   test-mysql-mariadb:
@@ -160,40 +221,40 @@ jobs:
       matrix:
         include:
           - name: MySQL 5.7
-            image: mysql:5.7
+            image: mysql:5.7.37
             dialect: mysql
             node-version: 12
           - name: MySQL 5.7
-            image: mysql:5.7
+            image: mysql:5.7.37
             dialect: mysql
             node-version: 16
           - name: MySQL 8.0
-            image: mysql:8.0
+            image: mysql:8.0.28
             dialect: mysql
             node-version: 12
           - name: MySQL 8.0
-            image: mysql:8.0
+            image: mysql:8.0.28
             dialect: mysql
             node-version: 16
           - name: MariaDB 10.3
-            image: mariadb:10.3
+            image: mariadb:10.3.34
             dialect: mariadb
             node-version: 12
           - name: MariaDB 10.3
-            image: mariadb:10.3
+            image: mariadb:10.3.34
             dialect: mariadb
             node-version: 16
           - name: MariaDB 10.5
-            image: mariadb:10.5
+            image: mariadb:10.5.13
             dialect: mariadb
             node-version: 12
           - name: MariaDB 10.5
-            image: mariadb:10.5
+            image: mariadb:10.5.13
             dialect: mariadb
             node-version: 16
     name: ${{ matrix.name }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: test-typings
+    needs: [ unit-test, test-typings ]
     services:
       mysql:
         image: ${{ matrix.image }}
@@ -214,9 +275,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
   test-mssql:
@@ -227,7 +291,7 @@ jobs:
         mssql-version: [2017, 2019]
     name: MSSQL ${{ matrix.mssql-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: test-typings
+    needs: [ unit-test, test-typings ]
     services:
       mssql:
         image: mcr.microsoft.com/mssql/server:${{ matrix.mssql-version }}-latest
@@ -253,29 +317,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn test-integration
-  test-snowflake:
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [12, 16]
-    name: SNOWFLAKE (Node ${{ matrix.node-version }})
-    runs-on: ubuntu-latest
-    needs: test-typings
-    env:
-      DIALECT: snowflake
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile --ignore-engines
-      - name: Unit Tests
-        run: yarn test-unit
   release:
     name: Release
     runs-on: ubuntu-latest
@@ -296,7 +345,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - run: yarn install --frozen-lockfile
+          cache: yarn
+      - uses: actions/download-artifact@v2
+        with:
+          name: install-build-artifact-node-16
+      - name: Extract artifact
+        run: tar -xf install-build-node-16.tar
       - run: yarn semantic-release
       - id: sequelize
         uses: sdepold/github-action-get-latest-release@master
