--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "source-map-support": "0.5.21",
     "sqlite3": "npm:@vscode/sqlite3@5.0.7",
     "tedious": "14.3.0",
+    "typedoc": "^0.22.13",
     "typescript": "4.6.2"
   },
   "peerDependenciesMeta": {
@@ -211,10 +212,9 @@
     "----------------------------------------- static analysis -----------------------------------------": "",
     "lint": "eslint . --fix --report-unused-disable-directives",
     "lint-no-fix": "eslint . --quiet --report-unused-disable-directives",
-    "lint-docs": "markdownlint docs",
     "test-typings": "tsc --noEmit --emitDeclarationOnly false && tsc -b test/tsconfig.json",
     "----------------------------------------- documentation -------------------------------------------": "",
-    "docs": "cd documentation && yarn install && yarn build",
+    "docs": "typedoc",
     "----------------------------------------- tests ---------------------------------------------------": "",
     "mocha": "mocha -r ./test/registerEsbuild",
     "test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
