--- a/package.json
+++ b/package.json
@@ -198,14 +198,17 @@
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-postgres": "bash dev/postgres/10/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
+    "start-oracle": "bash dev/oracle/21c/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
+    "stop-oracle": "bash dev/oracle/21c/stop.sh",
     "restart-mariadb": "npm run start-mariadb",
     "restart-mysql": "npm run start-mysql",
     "restart-postgres": "npm run start-postgres",
     "restart-mssql": "npm run start-mssql",
+    "restart-oracle": "npm run start-oracle",
     "----------------------------------------- local tests ---------------------------------------------": "",
     "test-unit-mariadb": "cross-env DIALECT=mariadb npm run test-unit",
     "test-unit-mysql": "cross-env DIALECT=mysql npm run test-unit",
@@ -213,18 +216,21 @@
     "test-unit-postgres-native": "cross-env DIALECT=postgres-native npm run test-unit",
     "test-unit-sqlite": "cross-env DIALECT=sqlite npm run test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql npm run test-unit",
+    "test-unit-oracle": "cross-env DIALECT=oracle npm run test-unit",
     "test-integration-mariadb": "cross-env DIALECT=mariadb npm run test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql npm run test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres npm run test-integration",
     "test-integration-postgres-native": "cross-env DIALECT=postgres-native npm run test-integration",
     "test-integration-sqlite": "cross-env DIALECT=sqlite npm run test-integration",
     "test-integration-mssql": "cross-env DIALECT=mssql npm run test-integration",
+    "test-integration-oracle": "cross-env DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=51521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm run test-integration",
     "test-mariadb": "cross-env DIALECT=mariadb npm test",
     "test-mysql": "cross-env DIALECT=mysql npm test",
     "test-sqlite": "cross-env DIALECT=sqlite npm test",
     "test-postgres": "cross-env DIALECT=postgres npm test",
     "test-postgres-native": "cross-env DIALECT=postgres-native npm test",
     "test-mssql": "cross-env DIALECT=mssql npm test",
+    "test-oracle": "cross-env DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=51521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm test",
     "----------------------------------------- development ---------------------------------------------": "",
     "sscce": "node sscce.js",
     "sscce-mariadb": "cross-env DIALECT=mariadb node sscce.js",
@@ -233,6 +239,7 @@
     "sscce-postgres-native": "cross-env DIALECT=postgres-native node sscce.js",
     "sscce-sqlite": "cross-env DIALECT=sqlite node sscce.js",
     "sscce-mssql": "cross-env DIALECT=mssql node sscce.js",
+    "sscce-oracle": "cross-env DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=51521 SEQ_ORACLE_DB=XEPDB1 node sscce.js",
     "---------------------------------------------------------------------------------------------------": ""
   }
 }
