--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "checkJs": false,
-    "removeComments": false
+    "removeComments": false,
+    "stripInternal": true
   },
   "include": ["./src/**/*.ts"]
 }
