--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/chai": "4.3.0",
     "@types/lodash": "4.14.179",
     "@types/mocha": "9.1.0",
+    "@types/mysql": "2.15.20",
     "@types/node": "16.11.26",
     "@types/sinon": "10.0.11",
     "@types/uuid": "8.3.4",
