refactor(Connection-Pool): changed connection pool from generic-pool to sequelize-pool

--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "debug": "^3.1.0",
     "depd": "^1.1.0",
     "dottie": "^2.0.0",
-    "generic-pool": "3.5.0",
     "inflection": "1.12.0",
     "lodash": "^4.17.1",
     "moment": "^2.20.0",
     "moment-timezone": "^0.5.14",
     "retry-as-promised": "^2.3.2",
     "semver": "^5.5.0",
+    "sequelize-pool": "^1.0.0",
     "terraformer-wkt-parser": "^1.1.2",
     "toposort-class": "^1.0.1",
     "uuid": "^3.2.1",
@@ -74,6 +74,7 @@
     "istanbul": "^0.4.5",
     "lcov-result-merger": "^2.0.0",
     "mocha": "^5.0.4",
+    "mochawesome": "^3.0.0",
     "mysql2": "1.5.3",
     "pg": "^7.x",
     "pg-hstore": "^2.3.2",
@@ -83,7 +84,6 @@
     "semantic-release": "^15.0.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
-    "sqlite3": "^3.x",
     "tedious": "1.14.0",
     "uuid-validate": "^0.0.2",
     "validate-commit-msg": "^2.12.2"
@@ -115,14 +115,14 @@
     "test-docker-integration": "env-cmd $npm_package_options_env_cmd npm run test-integration",
     "docs": "esdoc && cp docs/ROUTER esdoc/ROUTER && cp docs/favicon.ico esdoc/favicon.ico",
     "teaser": "node -e \"console.log('#'.repeat(process.env.DIALECT.length + 22) + '\\n# Running tests for ' + process.env.DIALECT + ' #\\n' + '#'.repeat(process.env.DIALECT.length + 22))\"",
-    "test-unit": "mocha $npm_package_options_mocha \"test/unit/**/*.js\"",
+    "test-unit": "mocha --reporter mochawesome --ui tdd $npm_package_options_mocha \"test/unit/**/*.js\"",
     "test-unit-mysql": "cross-env DIALECT=mysql npm run test-unit",
     "test-unit-postgres": "cross-env DIALECT=postgres npm run test-unit",
     "test-unit-postgres-native": "cross-env DIALECT=postgres-native npm run test-unit",
     "test-unit-sqlite": "cross-env DIALECT=sqlite npm run test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql npm run test-unit",
     "test-unit-all": "npm run test-unit-mysql && npm run test-unit-postgres && npm run test-unit-postgres-native && npm run test-unit-mssql && npm run test-unit-sqlite",
-    "test-integration": "mocha $npm_package_options_mocha \"test/integration/**/*.test.js\"",
+    "test-integration": "mocha  --reporter mochawesome --timeout 10000 $npm_package_options_mocha \"test/integration/**/*.test.js\"",
     "test-integration-mysql": "cross-env DIALECT=mysql npm run test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres npm run test-integration",
     "test-integration-postgres-native": "cross-env DIALECT=postgres-native npm run test-integration",
