--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "semantic-release": "^15.0.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
+    "sqlite3": "^5.0.2",
     "tedious": "1.14.0",
     "uuid-validate": "^0.0.2",
     "validate-commit-msg": "^2.12.2"
