fix: added oracledb version info to package.json

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "mocha": "^7.2.0",
     "module-alias": "^2.2.2",
     "mysql2": "^2.3.3",
+    "oracledb": "^5.4.0",
     "node-hook": "^1.0.0",
     "nyc": "^15.1.0",
     "p-map": "^4.0.0",
@@ -152,6 +153,7 @@
     "db2",
     "ibm_db",
     "sql",
+    "oracledb",
     "sqlserver",
     "snowflake",
     "orm",
