--- a/dev/oracle/21c/docker-compose.yml
+++ b/dev/oracle/21c/docker-compose.yml
@@ -1,12 +1,16 @@
 services:
   oracledb-21c:
     container_name: oraclexedb21c
-    image: oracle/database:21.3.0-xe
+    image: gvenzl/oracle-xe:21.3.0-slim
     environment:
-      ORACLE_PWD: password
-      ORACLE_CHARACTERSET: AL32UTF8
+      ORACLE_PASSWORD: password
+      APP_USER: sequelizetest
+      APP_USER_PASSWORD: sequelizepassword
     ports:
-      - 51521:1521
+      - 1521:1521
+    healthcheck:
+      test: ["CMD-SHELL", "sqlplus", "sequelizetest/sequelizepassword@XEPDB1"]
+      retries: 10
 
 networks:
   default:
