--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "source-map-support": "0.5.21",
     "sqlite3": "npm:@vscode/sqlite3@5.0.8",
     "tedious": "14.4.0",
-    "typedoc": "^0.22.13",
+    "typedoc": "0.22.13",
     "typescript": "4.6.3"
   },
   "peerDependenciesMeta": {
