--- a/package.json
+++ b/package.json
@@ -77,10 +77,6 @@
     "cross-env": "7.0.3",
     "delay": "5.0.0",
     "esbuild": "0.14.30",
-    "esdoc": "1.1.0",
-    "esdoc-ecmascript-proposal-plugin": "1.0.0",
-    "esdoc-inject-style-plugin": "1.0.0",
-    "esdoc-standard-plugin": "1.0.0",
     "eslint": "8.12.0",
     "eslint-plugin-jsdoc": "38.1.6",
     "eslint-plugin-mocha": "10.0.3",
@@ -114,6 +110,7 @@
     "source-map-support": "0.5.21",
     "sqlite3": "npm:@vscode/sqlite3@5.0.8",
     "tedious": "14.4.0",
+    "typedoc": "0.22.13",
     "typescript": "4.6.3"
   },
   "peerDependenciesMeta": {
@@ -214,10 +211,9 @@
     "----------------------------------------- static analysis -----------------------------------------": "",
     "lint": "eslint . --fix --report-unused-disable-directives",
     "lint-no-fix": "eslint . --quiet --report-unused-disable-directives",
-    "lint-docs": "markdownlint docs",
     "test-typings": "tsc --noEmit --emitDeclarationOnly false && tsc -b test/tsconfig.json",
     "----------------------------------------- documentation -------------------------------------------": "",
-    "docs": "rimraf esdoc && esdoc -c docs/esdoc-config.js && cp docs/favicon.ico esdoc/favicon.ico && cp docs/ROUTER.txt esdoc/ROUTER && node docs/run-docs-transforms.js && node docs/redirects/create-redirects.js && rimraf esdoc/file esdoc/source.html",
+    "docs": "typedoc",
     "----------------------------------------- tests ---------------------------------------------------": "",
     "mocha": "mocha -r ./test/registerEsbuild",
     "test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
