--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     "snowflake",
     "orm",
     "nodejs",
-    "yugabyte",
+    "yugabytedb",
     "object relational mapper",
     "database",
     "db"
@@ -241,20 +241,20 @@
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-mysql-8": "bash dev/mysql/8.0/start.sh",
     "start-postgres": "bash dev/postgres/10/start.sh",
-    "start-yugabyte": "bash dev/yugabyte/start.sh",
+    "start-yugabytedb": "bash dev/yugabytedb/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
-    "stop-yugabyte": "bash dev/yugabyte/stop.sh",
+    "stop-yugabytedb": "bash dev/yugabytedb/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
     "restart-postgres": "yarn start-postgres",
-    "restart-yugabyte": "yarn start-yugabyte",
+    "restart-yugabytedb": "yarn start-yugabytedb",
     "restart-mssql": "yarn start-mssql",
     "restart-db2": "yarn start-db2",
     "----------------------------------------- local tests ---------------------------------------------": "",
@@ -267,8 +267,8 @@
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
     "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
-    "test-unit-yugabyte": "export DIALECT=yugabyte && yarn test-unit",
-    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-yugabyte && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
+    "test-unit-yugabytedb": "export DIALECT=yugabytedb && yarn test-unit",
+    "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-yugabytedb && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
     "test-integration-postgres": "cross-env DIALECT=postgres yarn test-integration",
@@ -278,7 +278,7 @@
     "test-integration-db2": "cross-env DIALECT=db2 yarn test-integration",
     "test-integration-ibmi": "cross-env DIALECT=ibmi yarn test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake yarn test-integration",
-    "test-integration-yugabyte": "export DIALECT=yugabyte SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn mocha \"test/integration/**/*.test.[tj]s\" --timeout 600000",
+    "test-integration-yugabytedb": "export DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn mocha \"test/integration/**/*.test.[tj]s\" --timeout 600000",
     "test-mariadb": "cross-env DIALECT=mariadb yarn test",
     "test-mysql": "cross-env DIALECT=mysql yarn test",
     "test-sqlite": "cross-env DIALECT=sqlite yarn test",
@@ -287,7 +287,7 @@
     "test-mssql": "cross-env DIALECT=mssql yarn test",
     "test-db2": "cross-env DIALECT=db2 yarn test",
     "test-ibmi": "cross-env DIALECT=ibmi yarn test",
-    "test-yugabyte": "export DIALECT=yugabyte SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn prepare && yarn test-typings && yarn teaser && yarn test-unit && yarn test-integration-yugabyte",
+    "test-yugabytedb": "export DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn prepare && yarn test-typings && yarn teaser && yarn test-unit && yarn test-integration-yugabytedb",
     "----------------------------------------- development ---------------------------------------------": "",
     "fix-commit": "export TMPFILE=$(mktemp) && grep -v '^#' $(git rev-parse --git-dir)/COMMIT_EDITMSG > $TMPFILE && git commit -e -F $TMPFILE",
     "sscce": "node sscce.js",
