--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "fast-glob": "3.2.11",
     "fs-jetpack": "4.3.1",
     "husky": "7.0.4",
-    "ibm_db": "^2.8.1",
+    "ibm_db": "2.8.1",
     "lcov-result-merger": "3.1.0",
     "lint-staged": "12.3.5",
     "mariadb": "2.5.6",
@@ -103,7 +103,7 @@
     "mysql2": "2.3.3",
     "node-hook": "1.0.0",
     "nyc": "15.1.0",
-    "odbc": "^2.4.2",
+    "odbc": "2.4.2",
     "p-map": "4.0.0",
     "p-props": "4.0.0",
     "p-settle": "4.1.1",
@@ -117,7 +117,7 @@
     "sinon-chai": "3.7.0",
     "snowflake-sdk": "1.6.7",
     "source-map-support": "0.5.21",
-    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
+    "sqlite3": "npm:@vscode/sqlite3@5.0.7",
     "tedious": "14.3.0",
     "typescript": "4.6.2"
   },
