feat: drop support for node 12

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "./*": "./*"
   },
   "engines": {
-    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   },
   "files": [
     "lib",
