feat(dialect): dev environment set up for yugabytedb dialect

--- a/package.json
+++ b/package.json
@@ -43,14 +43,10 @@
     "@types/validator": "^13.7.1",
     "debug": "^4.3.3",
     "dottie": "^2.0.2",
-    "gcc": "^1.0.2",
     "inflection": "^1.13.2",
-    "install": "^0.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
-    "node-gyp": "^9.0.0",
-    "node-pre-gyp": "^0.17.0",
     "pg-connection-string": "^2.5.0",
     "retry-as-promised": "^5.0.0",
     "semver": "^7.3.5",
@@ -58,8 +54,7 @@
     "toposort-class": "^1.0.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
-    "wkx": "^0.5.0",
-    "yarn": "^1.22.17"
+    "wkx": "^0.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "16.2.1",
@@ -241,20 +236,23 @@
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-mysql-8": "bash dev/mysql/8.0/start.sh",
     "start-postgres": "bash dev/postgres/10/start.sh",
-    "start-yugabytedb": "bash dev/yugabytedb/start.sh",
+    "start-yugabytedb-2.12": "bash dev/yugabytedb/2.12/start.sh",
+    "start-yugabytedb-2.4": "bash dev/yugabytedb/2.4/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
-    "stop-yugabytedb": "bash dev/yugabytedb/stop.sh",
+    "stop-yugabytedb-2.12": "bash dev/yugabytedb/2.12/stop.sh",
+    "stop-yugabytedb-2.4": "bash dev/yugabytedb/2.4/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
     "restart-postgres": "yarn start-postgres",
-    "restart-yugabytedb": "yarn start-yugabytedb",
+    "restart-yugabytedb-2.12": "yarn start-yugabytedb-2.12",
+    "restart-yugabytedb-2.4": "yarn start-yugabytedb-2.4",
     "restart-mssql": "yarn start-mssql",
     "restart-db2": "yarn start-db2",
     "----------------------------------------- local tests ---------------------------------------------": "",
@@ -267,7 +265,7 @@
     "test-unit-db2": "cross-env DIALECT=db2 yarn test-unit",
     "test-unit-ibmi": "cross-env DIALECT=ibmi yarn test-unit",
     "test-unit-snowflake": "cross-env DIALECT=snowflake yarn test-unit",
-    "test-unit-yugabytedb": "export DIALECT=yugabytedb && yarn test-unit",
+    "test-unit-yugabytedb": "cross-env DIALECT=yugabytedb yarn test-unit",
     "test-unit-all": "yarn test-unit-mariadb && yarn test-unit-mysql && yarn test-unit-postgres && yarn test-unit-yugabytedb && yarn test-unit-postgres-native && yarn test-unit-mssql && yarn test-unit-sqlite && yarn test-unit-snowflake && yarn test-unit-db2 && yarn test-unit-ibmi",
     "test-integration-mariadb": "cross-env DIALECT=mariadb yarn test-integration",
     "test-integration-mysql": "cross-env DIALECT=mysql yarn test-integration",
@@ -278,7 +276,7 @@
     "test-integration-db2": "cross-env DIALECT=db2 yarn test-integration",
     "test-integration-ibmi": "cross-env DIALECT=ibmi yarn test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake yarn test-integration",
-    "test-integration-yugabytedb": "export DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn mocha \"test/integration/**/*.test.[tj]s\" --timeout 600000",
+    "test-integration-yugabytedb": "cross-env DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000  yarn test-integration --timeout 600000",
     "test-mariadb": "cross-env DIALECT=mariadb yarn test",
     "test-mysql": "cross-env DIALECT=mysql yarn test",
     "test-sqlite": "cross-env DIALECT=sqlite yarn test",
@@ -287,7 +285,7 @@
     "test-mssql": "cross-env DIALECT=mssql yarn test",
     "test-db2": "cross-env DIALECT=db2 yarn test",
     "test-ibmi": "cross-env DIALECT=ibmi yarn test",
-    "test-yugabytedb": "export DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000  && yarn prepare && yarn test-typings && yarn teaser && yarn test-unit && yarn test-integration-yugabytedb",
+    "test-yugabytedb": "cross-env DIALECT=yugabytedb SEQ_TEST_CLEANUP_TIMEOUT=100000 yarn test --timeout 600000",
     "----------------------------------------- development ---------------------------------------------": "",
     "fix-commit": "export TMPFILE=$(mktemp) && grep -v '^#' $(git rev-parse --git-dir)/COMMIT_EDITMSG > $TMPFILE && git commit -e -F $TMPFILE",
     "sscce": "node sscce.js",
