--- a/dev/yugabytedb/2.4/docker-compose.yml
+++ b/dev/yugabytedb/2.4/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   yugabyte:
-    container_name: sequelize-yugabyte
-    image: yugabytedb/yugabyte:latest
+    container_name: sequelize-yugabytedb-2.4
+    image: yugabytedb/yugabyte:2.4.8.0-b16
     command:  bin/yugabyted start --daemon=false --initial_scripts_dir /docker-entrypoint-initdb.d
     restart: always
     environment:
@@ -9,7 +9,7 @@ services:
       YSQL_PASSWORD: yugabyte
       YSQL_DB: sequelize_test
     volumes:
-      - "./yugabytedb-init.sql:/docker-entrypoint-initdb.d/yugabytedb-init.sql"
+      - "./../yugabytedb-init.sql:/docker-entrypoint-initdb.d/yugabytedb-init.sql"
     ports:
       - 25099:5433
 
