--- a/package.json
+++ b/package.json
@@ -266,7 +266,7 @@
     "test-integration-mssql": "cross-env DIALECT=mssql npm run test-integration",
     "test-integration-db2": "cross-env DIALECT=db2 npm run test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake npm run test-integration",
-    "test-integration-oracle": "cross-env DYLD_LIBRARY_PATH=~/Download/oracle/instantclient/ TNS_ADMIN=~/Downloads/oracle/instantclient/network/admin DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm run test-integration",
+    "test-integration-oracle": "cross-env DYLD_LIBRARY_PATH=~/Downloads/oracle/instantclient/ TNS_ADMIN=~/Downloads/oracle/instantclient/network/admin LD_LIBRARY_PATH=~/Downloads/oracle/instantclient/ DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm run test-integration",
     "test-mariadb": "cross-env DIALECT=mariadb npm test",
     "test-mysql": "cross-env DIALECT=mysql npm test",
     "test-sqlite": "cross-env DIALECT=sqlite npm test",
@@ -274,7 +274,7 @@
     "test-postgres-native": "cross-env DIALECT=postgres-native npm test",
     "test-mssql": "cross-env DIALECT=mssql npm test",
     "test-db2": "cross-env DIALECT=db2 npm test",
-    "test-oracle": "cross-env DYLD_LIBRARY_PATH=~/Download/oracle/instantclient/ TNS_ADMIN=~/Downloads/oracle/instantclient/network/admin DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm test",
+    "test-oracle": "cross-env DYLD_LIBRARY_PATH=~/Downloads/oracle/instantclient/ TNS_ADMIN=~/Downloads/oracle/instantclient/network/admin LD_LIBRARY_PATH=~/Downloads/oracle/instantclient/ DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm test",
     "----------------------------------------- development ---------------------------------------------": "",
     "sscce": "node sscce.js",
     "sscce-mariadb": "cross-env DIALECT=mariadb node sscce.js",
