feat(dialect): added unit test for yugabytedb in github workflow for ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,8 @@ jobs:
         run: yarn test-unit-ibmi
       - name: Unit tests (snowflake)
         run: yarn test-unit-snowflake
+      - name: Unit tests (yugabytedb)
+        run: yarn test-unit-yugabytedb
   docs:
     name: Generate TypeDoc
     runs-on: ubuntu-latest
