refactor: continue refactor

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "source-map-support": "0.5.21",
     "sqlite3": "5.0.6",
     "tedious": "14.4.0",
+    "type-fest": "2.12.2",
     "typedoc": "0.22.15",
     "typescript": "4.6.4"
   },
