refactor: migrate associations to TypeScript (#14280)
* refactor: migrate associations to ts (wip)

* refactor: migrate has-one to ts

* refactor: migrate belongs-to association to TS

* refactor: fix typing errors in has-one, belongs-to

* refactor: migrate has-many to ts

* refactor: migrate has-many to ts

* refactor: finish migrating has-many.ts

* refactor: migrate association/index.ts

* refactor: continue association migration to ts

* build: accept @typeParam, @internal typedoc tags

* feat: improve typings of hasOne.set

* fix: make HasOneGetAssociationMixin's output nullable

* fix: improve typing of BelongsTo set method

* feat: update hasMany

* refactor: complete typing associations

* fix: fix failing tests

* refactor: migrate sequelize export to esm

* fix: fix associations based on unit tests

* fix: fix associations based on intergration tests

* test: add test to prevent duplicate associations aliases

* fix: fix Sequelize typings

* test: unify groupedLimit m-n test with the integration one

* feat: forbid instanciating Association/ManyAssociation

* docs: revert accidental comment removal

* fix: normalize includes before merging them

* fix: replace query generator trying to create a new association

* refactor: revert changes to reduce noise

* test: fix mssql query generator test

* feat: forbid users from instantiating association Classes

* fix: dedupe BelongsToMany association

* fix: use isSameModel to compare models

* feat: improve error message for 'this association was already created'

* fix: continue work to fix tests

* feat: fix associations based on unit tests

* refactor: migrate mixin.js to typescript

* refactor: rename 'mixin.ts' -> 'define-association-methods.ts'

* fix: fix accidental usage of _.eq instead of _.isEqual

* test: fix m:n tests

* refactor: move association definitions methods inside their classes

* refactor: continue refactoring associations

* feat: improve association deduplication

* fix: remove accidenta

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "semver": "^7.3.5",
     "sequelize-pool": "^7.1.0",
     "toposort-class": "^1.0.1",
+    "type-fest": "^2.12.2",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "wkx": "^0.5.0"
