ci: remove PostgreSQL 9.5; add PostgreSQL 12
This commit also includes dev environment updates.
Details:
 - Package.json: Add bulk scripts to start-all/stop-all databases and run-all tests:
    - `yarn start-all` spins up all database containers
    - `yarn stop-all` spins down all database containers
    - `yarn test-all` will cycle through all the different tests one-after-another
       - there is no special output redirection (logging), so need a long shell history and to watch for errors
 - Dev: Remove PostgreSQL v9.5 Docker container that was added in a previous commit
 - Dev: Add PostgreSQL v12 lifecycle scripts
 - Dev: Update DB2 lifecycle scripts; use local directory for "Docker" instead of root
 - Dev-dcos: add DB2 README
 - Dev: Fix check script (temporary workaround for TypeSript)

--- a/package.json
+++ b/package.json
@@ -225,22 +225,30 @@
     "cover-integration": "cross-env COVERAGE=true nyc --reporter=lcovonly yarn mocha \"test/integration/**/*.test.[tj]s\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/integration.info')\"",
     "cover-unit": "cross-env COVERAGE=true nyc --reporter=lcovonly yarn mocha \"test/unit/**/*.test.[tj]s\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/unit.info')\"",
     "merge-coverage": "lcov-result-merger \"coverage/*.info\" \"coverage/lcov.info\"",
-    "----------------------------------------- local test dbs ------------------------------------------": "",
+    "----------------------------------------- bulk tests ------------------------------------------": "",
+    "start-all": "grep 'bash dev' package.json | grep start | grep -vP \"(all)\" | cut -d'\"' -f4 | sort | xargs -n1 | grep dev | xargs -n1 bash",
+    "test-all": "grep 'test-' package.json | grep -vP \"(unit|integration|smoke|typings)\" | cut -d'\"' -f4 | xargs -n4 yarn ",
+    "stop-all": "grep 'bash dev' package.json | grep stop | grep -vP \"(all)\" | cut -d'\"' -f4 | sort | xargs -n1 | grep dev | xargs -n1 bash",
+    "----------------------------------------- database containers -------------------------------------": "",
     "start-mariadb": "bash dev/mariadb/10.3/start.sh",
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-mysql-8": "bash dev/mysql/8.0/start.sh",
-    "start-postgres": "bash dev/postgres/10/start.sh",
+    "start-postgres": "bash dev/postgres/12/start.sh",
+    "start-postgres-10": "bash dev/postgres/10/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
-    "stop-postgres": "bash dev/postgres/10/stop.sh",
+    "stop-postgres": "bash dev/postgres/12/stop.sh",
+    "stop-postgres-10": "bash dev/postgres/10/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
+    "restart-mysql-8": "yarn start-mysql",
     "restart-postgres": "yarn start-postgres",
+    "restart-postgres-10": "yarn start-postgres-10",
     "restart-mssql": "yarn start-mssql",
     "restart-db2": "yarn start-db2",
     "----------------------------------------- local tests ---------------------------------------------": "",
